<resources>
    <string name="app_name">Health Tracker</string>
    <string name="Current_weight">50 Кг</string>
    <string name="Second_weight">30 Кг</string>
    <string name="Kkal_out">1000 Ккал</string>
    <string name="day_target">1500 Ккал</string>
    <string name="target_kg">20 Кг</string>
    <string name="add_actyv">Добавить активность</string>
    <string name="update_actyv">Обновить активность</string>

    <string name="Main_menu">Главная страница</string>
    <string name="Person_prop">Параметры тела</string>
    <string name="Statistic">Статистика</string>
    <string name="IBV">ИМТ калькулятор</string>
    <string name="Setting">Настройки</string>

    <string name="BodyPropHeader">Вашы параметры</string>
    <string name="Height">Ваш рост:</string>
    <string name="WeightString">Ваш вес:</string>
    <string name="AgeString">Ваш возраст:</string>
    <string name="SexString">Ваш пол:</string>

    <string name="IMTString">ИМТ :</string>
    <string name="ToPerfectWeightString">До идеального веса :</string>
    <string name="ButtonChangeString">Изменить параметры</string>
    <string name="SaveButtonChangeString">Сохранить изменения</string>


</resources>