<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >
    <group android:checkableBehavior="single">
        <item android:title="@string/Main_menu"
            android:id="@+id/Main_page_menu"
            android:icon="@drawable/ic_home"/>

        <item android:title="@string/Person_prop"
            android:id="@+id/personProp_page_menu"
            android:icon="@drawable/ic_body"/>

        <item android:title="@string/Statistic"
            android:id="@+id/Statistic_page_menu"
            android:icon="@drawable/ic_analytics"/>

        <item android:title="@string/IBV"
            android:id="@+id/IBV_page_menu"
            android:icon="@drawable/ic_baseline_calculate_24"/>

        <item android:title="@string/Setting"
            android:id="@+id/Setting_page_menu"
            android:icon="@drawable/ic_setting"/>


    </group>

</menu>